# Noesis

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  MANIFEST.in  NOESIS_PRESENTATION.md  README.md  USER_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.yaml
examples/: chat_agent_demo.py  demo_workflow.py  innovation_demo.py  multi_agent_demo.py
noesis/: __init__.py  cli.py  config.py
noesis/agents/: __init__.py  langchain_memory.py  persistent_agent.py
noesis/api/: __init__.py  runner.py  server.py
noesis/api/static/: app.js  index.html  styles.css
noesis/core/: __init__.py  engine.py  models.py
noesis/forgetting/: __init__.py  adaptive.py  redundancy.py
noesis/graph/: __init__.py  memory_graph.py  neo4j_backend.py  recall.py
noesis/ingestion/: __init__.py  collector.py
noesis/recall/: __init__.py  predictive.py
noesis/semantic/: __init__.py  abstraction.py  categorization.py  clustering.py  cognition.py  embeddings.py  evolution.py  importance.py  insights.py  parser.py
noesis/storage/: __init__.py  sqlite_store.py
noesis/symbolic/: __init__.py  bytecode.py  compression.py  packets.py  tokenizer.py
noesis/sync/: __init__.py  distributed.py  mesh_client.py  mesh_server.py  packet_merge.py
noesis/utils/: __init__.py  logging_config.py
scripts/: run_server.py  setup.ps1  setup.sh
tests/: test_api.py  test_identity_recall.py  test_noesis.py  test_phases.py
